[package]
name = "gh-workflow-parser"
version = "0.5.3"
documentation = "https://docs.rs/gh-workflow-parser"
edition = "2021"
readme = "README.md"
license = "MIT"
keywords = ["CLI", "CI", "tool"]
description = "Parse GitHub workflows and do stuff like create issues"
categories = ["command-line-utilities"]
authors = ["Marc Beck König <mki@skytem.com>"]
exclude = ["gh_cli/gh"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
distance = "0.4.0"
log = "0.4.20"
once_cell = "1.19.0"
regex = "1.10.3"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
stderrlog = "0.6.0"
which = "6.0.0"
clap_complete = "4.5.0"
semver = "1.0.21"
bzip2 = "0.4.4"
strum = { version = "0.26", features = ["derive"] }

[build-dependencies]
bzip2 = "0.4.4"

[dev-dependencies]
pretty_assertions = "1.4.0"
temp-dir = "0.1.11"
assert_fs = "1.0.13"
assert_cmd = "2.0.11"
predicates = "3.0.3"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'

[profile.release-ci]
inherits = "release"
lto = false
codegen-units = 32
